[package]
name = "c_launcher"
version = "0.1.1"
edition = "2021"
authors = ["ClebsonTorres <clebson.torres@gmail.com>"]
description = "Um launcher estilo Spotlight para Windows"
license = "MIT"

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2.3.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
fuzzy-matcher = "0.3"
directories = "6.0.0"
thiserror = "2.0.18"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com",
] }
open = "5.3.3"
tauri-plugin-global-shortcut = "2.0.0-beta.7"
tauri-plugin-autostart = "2.5.1"
image = { version = "0.25.9", default-features = false, features = ["ico", "png"] }
urlencoding = "2.1.3"
meval = "0.2.0"
windows-core = "0.58.0"



[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
