[package]
name = "c_launcher"
version = "0.1.1"
edition = "2021"
authors = ["ClebsonTorres <clebson.torres@gmail.com>"]
description = "Um launcher estilo Spotlight para Windows"
license = "MIT"

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2.3.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
fuzzy-matcher = "0.3"
directories = "6.0.0"
thiserror = "2.0"
open = "5.3"
tauri-plugin-global-shortcut = "2.0.0" # Versão estável

image = { version = "0.25", default-features = false, features = ["ico", "png"] }
urlencoding = "2.1"
meval = "0.2"
arboard = "3.6.1"


[target.'cfg(windows)'.dependencies]
tauri-plugin-autostart = "2.0.0"
windows-core = "0.62.2" # Forçando a versão que não quebra builds Unix
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com",
] }

[build-dependencies]
tauri-build = { version = "2.0" }
